--- a/Markdown.Rmd
+++ b/Markdown.Rmd
@@ -1,9 +1,11 @@
 ---
 output: 
-  html_document:
-    toc: true
+  html_document: 
+    df_print: default
+    toc: yes
+    toc_depth: 1
     toc_float:
-      collapsed: false
+      collapsed: no
       css: styles.css
 ---
 
@@ -179,147 +181,87 @@ musicas_e_sent %>%
 
 Now you can choose a song
 
-```{r}
+```{r include=FALSE, message = F}
 sent_por_mus <- musicas_e_sent %>% 
   group_by(SName, sentiment) %>% count() %>% 
   ungroup() %>% group_by(SName) %>% 
   mutate(prop = n/sum(n)) %>% ungroup()
-
-input_musica <- "Barely Legal"
-
-sent_por_mus %>% 
-  filter(SName == input_musica) %>%
-  e_charts(sentiment) %>% 
-  e_pie(prop, legend = F, radius = c("45%", "70%"))  %>%
-  e_text_g(right = 185, top = 175,
-    style = list(text = input_musica, fontSize = 20, fontFamily = 'monospace'))
-
-sent_por_mus %>% 
-  group_by(SName) %>% 
-  e_charts(sentiment, timeline = TRUE) %>% 
-  e_pie(prop, legend = F, radius = c("45%", "70%"))  %>%
-  e_text_g(right = 185, top = 175,
-    style = list(text = "SName", fontSize = 20, fontFamily = 'monospace'))
 ```
+
 
 ## {.tabset .tabset-fade .tabset-pills}
 
 ```{r include=FALSE, message = F}
 musicas_e_albuns <- musicas_e_sent %>% 
   inner_join(albuns)
+
+prop_sent_by_song <- function(input_album){
+  
+  musicas_e_albuns %>% 
+  filter(Album == input_album) %>% 
+  group_by(SName, sentiment) %>% count() %>% 
+  ungroup() %>% group_by(SName) %>% 
+  mutate(prop = n/sum(n) %>% round(2)) %>% 
+  e_charts(sentiment, timeline = TRUE) %>% 
+  e_pie(prop, legend = F, radius = c("45%", "70%")) %>% 
+    e_timeline_opts(
+        top = 'middle',
+        right = '100%',
+        orient = "vertical",
+        label = list(position = 'left'),
+        controlStyle = list(showPlayBtn = F, itemSize = 0, itemGap = 110),
+        lineStyle = list(show = F),
+        itemStyle = list(color = 'rgba(128, 128, 128, 0.3)')
+    ) %>%
+  e_tooltip("item", 
+            backgroundColor = "rgba(255,255,255,0.8)", 
+            borderColor = '#333', borderWidth = 1,
+            textStyle = list(color = '#333'))
+  
+}
 ```
 
 ### Is This It
 
 ```{r echo=FALSE}
-input_album <- "Is This It"
-
-musicas_e_albuns %>% 
-  filter(Album == input_album) %>% 
-  group_by(SName, sentiment) %>% count() %>% 
-  ungroup() %>% group_by(SName) %>% 
-  mutate(prop = n/sum(n)) %>% 
-  e_charts(sentiment, timeline = TRUE) %>% 
-  e_pie(prop, legend = F, radius = c("45%", "70%"))  %>%
-  e_text_g(right = 185, top = 175,
-    style = list(text = "SName", fontSize = 20, fontFamily = 'monospace'))
+prop_sent_by_song("Is This It")
 ```
 
  
 ### Room On Fire
 
 ```{r echo=FALSE}
-input_album <- "Room On Fire"
-
-musicas_e_albuns %>% 
-  filter(Album == input_album) %>% 
-  group_by(SName, sentiment) %>% count() %>% 
-  ungroup() %>% group_by(SName) %>% 
-  mutate(prop = n/sum(n)) %>% 
-  e_charts(sentiment, timeline = TRUE) %>% 
-  e_pie(prop, legend = F, radius = c("45%", "70%"))  %>%
-  e_text_g(right = 185, top = 175,
-    style = list(text = "SName", fontSize = 20, fontFamily = 'monospace'))
+prop_sent_by_song("Room On Fire")
 ```
 
 ### First Impressions of Earth
 
 ```{r echo=FALSE}
-input_album <- "First Impressions of Earth"
-
-musicas_e_albuns %>% 
-  filter(Album == input_album) %>% 
-  group_by(SName, sentiment) %>% count() %>% 
-  ungroup() %>% group_by(SName) %>% 
-  mutate(prop = n/sum(n)) %>% 
-  e_charts(sentiment, timeline = TRUE) %>% 
-  e_pie(prop, legend = F, radius = c("45%", "70%"))  %>%
-  e_text_g(right = 185, top = 175,
-    style = list(text = "SName", fontSize = 20, fontFamily = 'monospace'))
+prop_sent_by_song("First Impressions of Earth")
 ```
 
 ### Angles
 
 ```{r echo=FALSE}
-input_album <- "Angles"
-
-musicas_e_albuns %>% 
-  filter(Album == input_album) %>% 
-  group_by(SName, sentiment) %>% count() %>% 
-  ungroup() %>% group_by(SName) %>% 
-  mutate(prop = n/sum(n)) %>% 
-  e_charts(sentiment, timeline = TRUE) %>% 
-  e_pie(prop, legend = F, radius = c("45%", "70%"))  %>%
-  e_text_g(right = 185, top = 175,
-    style = list(text = "SName", fontSize = 20, fontFamily = 'monospace'))
+prop_sent_by_song("Angles")
 ```
 
 ### Comedown Machine
 
 ```{r echo=FALSE}
-input_album <- "Comedown Machine"
-
-musicas_e_albuns %>% 
-  filter(Album == input_album) %>% 
-  group_by(SName, sentiment) %>% count() %>% 
-  ungroup() %>% group_by(SName) %>% 
-  mutate(prop = n/sum(n)) %>% 
-  e_charts(sentiment, timeline = TRUE) %>% 
-  e_pie(prop, legend = F, radius = c("45%", "70%"))  %>%
-  e_text_g(right = 185, top = 175,
-    style = list(text = "SName", fontSize = 20, fontFamily = 'monospace'))
+prop_sent_by_song("Comedown Machine")
 ```
 
 ### Future Present Past
 
 ```{r echo=FALSE}
-input_album <- "Future Present Past [EP]"
-
-musicas_e_albuns %>% 
-  filter(Album == input_album) %>% 
-  group_by(SName, sentiment) %>% count() %>% 
-  ungroup() %>% group_by(SName) %>% 
-  mutate(prop = n/sum(n)) %>% 
-  e_charts(sentiment, timeline = TRUE) %>% 
-  e_pie(prop, legend = F, radius = c("45%", "70%"))  %>%
-  e_text_g(right = 185, top = 175,
-    style = list(text = "SName", fontSize = 20, fontFamily = 'monospace'))
+prop_sent_by_song("Future Present Past [EP]")
 ```
 
 ### The New Abnormal
 
 ```{r echo=FALSE}
-input_album <- "The New Abnormal"
-
-musicas_e_albuns %>% 
-  filter(Album == input_album) %>% 
-  group_by(SName, sentiment) %>% count() %>% 
-  ungroup() %>% group_by(SName) %>% 
-  mutate(prop = n/sum(n)) %>% 
-  e_charts(sentiment, timeline = TRUE) %>% 
-  e_pie(prop, legend = F, radius = c("45%", "70%"))  %>%
-  e_text_g(right = 185, top = 175,
-    style = list(text = "SName", fontSize = 20, fontFamily = 'monospace'))
+prop_sent_by_song("The New Abnormal")
 ```
  
 ## {.tabset .tabset-fade .tabset-pills}
