--- a/Markdown.Rmd
+++ b/Markdown.Rmd
@@ -10,6 +10,9 @@ output:
 ---
 
 <style>
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
+
 body {
   text-align: justify}
   
@@ -44,6 +47,7 @@ div.bloco1 {
 </style>
 
 
+
 ```{r include=FALSE, message=F, warning=F}
 library(tidyverse)
 library(tidytext)
@@ -58,13 +62,14 @@ stop_words <- stop_words %>% add_row(word = c("yeah", "gonna", "hey"))
 source("WebScraping.R")
 letras <- apply(musicas[,3], 1, get_lyric)
 musicas <- musicas %>% 
+  filter(!str_detect(SName, "[(]")) %>% 
   mutate(letras = tolower(letras))
 ```
 
 
-# Indrodution
+# Introduction
 
-I love The Strokes, and a WebScrap 90 songs of them
+I love The Strokes, and a WebScrap 82 songs of them
 
 # Cloud Words
 
@@ -352,6 +357,160 @@ gauge_trios("Surprise")
 ```{r echo=FALSE}
 gauge_trios("Trust")
 ```
+
+##
+
+Other tecnique to analyse text
+
+```{r echo=FALSE, message = F}
+afinn <- get_sentiments("afinn")
+
+sent_num_por_mus <- musicas %>% select(c(2,4)) %>% 
+  unnest_tokens(word, letras) %>%
+  anti_join(stop_words) %>%
+  group_by(word) %>% 
+  count() %>% ungroup() %>% 
+  inner_join(afinn) %>% 
+  filter(word != "yeah")
+```
+
+
+```{r echo=FALSE, message = F}
+sent_num_por_mus %>% 
+  e_charts() %>% 
+  e_histogram(value) %>% 
+  e_tooltip(backgroundColor = "rgba(255,255,255,0.8)", 
+            borderColor = '#333', borderWidth = 1,
+            textStyle = list(color = '#333'))
+```
+
+```{r echo=FALSE, message = F}
+sent_num_por_mus %>% 
+  e_charts(value) %>% 
+  e_scatter(n, name = "Frequency") %>% 
+  e_tooltip(backgroundColor = "rgba(255,255,255,0.8)", 
+            borderColor = '#333', borderWidth = 1,
+            textStyle = list(color = '#333'))
+```
+
+
+
+# Term Frequency
+
+```{r echo=FALSE, message = F}
+tf_idf <- musicas %>% select(c(2,4)) %>% 
+  unnest_tokens(word, letras) %>%
+  anti_join(stop_words) %>% 
+  group_by(SName) %>% 
+  count(word) %>% ungroup() %>% 
+  bind_tf_idf(word, SName, n)
+
+tf_idf %>%          # O quanto isso faria sentido?
+  e_chart(tf) %>% 
+  e_scatter(idf) %>% 
+  e_tooltip(backgroundColor = "rgba(255,255,255,0.8)", 
+            borderColor = '#333', borderWidth = 1,
+            textStyle = list(color = '#333'))
+```
+
+## {.tabset .tabset-fade .tabset-pills}
+
+```{r include=FALSE, message = F}
+tf_idf_by_song <- function(album){
+  
+  tf_idf %>%
+    inner_join(albuns) %>% 
+    filter(Album == album) %>% 
+    slice_max(tf_idf, n = 10) %>% 
+    group_by(SName) %>% 
+    e_charts(word, timeline = T) %>% 
+    e_bar(tf_idf, legend = F, name = "Ajusted Frequency")%>% 
+    e_timeline_opts(top = 'middle',
+                    right = '100%',
+                    orient = "vertical",
+                    label = list(position = 'left'),
+                    controlStyle = list(showPlayBtn = F, itemSize = 0, itemGap = 110),
+                    lineStyle = list(show = F),
+                    itemStyle = list(color = 'rgba(128, 128, 128, 0.3)')) %>% 
+    e_tooltip(backgroundColor = "rgba(255,255,255,0.8)", 
+              borderColor = '#333', borderWidth = 1,
+              textStyle = list(color = '#333')) %>% 
+    e_flip_coords()
+
+}
+```
+
+### Is This It
+
+```{r echo=FALSE}
+tf_idf_by_song("Is This It")
+```
+
+ 
+### Room On Fire
+
+```{r echo=FALSE}
+tf_idf_by_song("Room On Fire")
+```
+
+### First Impressions of Earth
+
+```{r echo=FALSE}
+tf_idf_by_song("First Impressions of Earth")
+```
+
+### Angles
+
+```{r echo=FALSE}
+tf_idf_by_song("Angles")
+```
+
+### Comedown Machine
+
+```{r echo=FALSE}
+tf_idf_by_song("Comedown Machine")
+```
+
+### Future Present Past
+
+```{r echo=FALSE}
+tf_idf_by_song("Future Present Past [EP]")
+```
+
+### The New Abnormal
+
+```{r echo=FALSE}
+tf_idf_by_song("The New Abnormal")
+```
+
+# Words Relationship
+
+```{r echo=FALSE, message = F}
+duplas <- musicas %>% select(c(2,4)) %>% 
+  unnest_tokens(bigram, letras, token = "ngrams", n = 2) %>%
+  separate(bigram, c("word1", "word2"), sep = " ") %>% 
+  filter(!word1 %in% stop_words$word, !word2 %in% stop_words$word)
+
+sankey <- duplas %>% group_by(word1, word2) %>% count() %>% ungroup()
+
+library(ggraph)
+library(igraph)
+
+bigram_graph <- sankey %>%
+  filter(n > 5) %>%
+  igraph::graph_from_data_frame()
+
+a <- grid::arrow(type = "closed", length = unit(.15, "inches"))
+
+ggraph(bigram_graph, layout = "fr") +
+  geom_edge_link(aes(edge_alpha = n), show.legend = FALSE,
+                 arrow = a, end_cap = circle(.07, 'inches')) +
+  geom_node_point(color = "lightblue", size = 5) +
+  geom_node_text(aes(label = name), vjust = 1, hjust = 1) +
+  theme_void()
+```
+
+
 
 
 
